# MandelbrotExplorer

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/: Mandel.cpp  Mandel.hpp
